# codal_scraper

./: .gitignore  DOCUMENTATION.md  INTEGRATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  SUMMARY.md  pyproject.toml  requirements.txt  setup.py
.myenv/: pyvenv.cfg
.myenv/Scripts/: activate  activate.bat
docs/: USAGE.md
examples/: async_usage.py  basic_usage.py  board_members_example.py  download_financial_excel.py  fetch_board_changes.py  full_board_scraping.py  network_vis.py  run_board_members_1394_1404.py  scrape_board_members_from_csv.py  test_download_excel.py  tsetmc_shareholders_from_board_members.py
output/: board_changes.parquet  board_changes.xlsx  test_output.csv  test_output.json  test_output.xlsx
src/codal_scraper/: __init__.py  async_client.py  board_scraper.py  cache.py  client.py  constants.py  exceptions.py  processor.py  rate_limiter.py  types.py  utils.py  validators.py
src/codal_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
storage/request_queues/default/: XPCd6pDT3eVh8EW.json  __metadata__.json  kynccahz1MKnUla.json
tests/: conftest.py  test_board_scraper.py  test_cache.py  test_client.py  test_integration.py  test_processor.py  test_quick.py  test_utils.py  test_validators.py
